--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "homepage": "https://github.com/jirbthagoras/pemilos-backend#readme",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/pino": "^7.0.4",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "ts-node": "^10.9.2"
+    "jsonwebtoken": "^9.0.2",
+    "pino": "^9.7.0",
+    "ts-node": "^10.9.2",
+    "zod": "^3.25.57"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
