--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/pino": "^7.0.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.7.0",
+    "redis": "^5.5.6",
     "ts-node": "^10.9.2",
     "zod": "^3.25.57"
   },
