[+] Added MongoDB Infra

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,7 @@ REDIS_PASSWORD=
 REDIS_PORT=
 REDIS_HOST=
 
-# 
+# MONGODB ENV
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=
