--- a/producer/package.json
+++ b/producer/package.json
@@ -2,11 +2,11 @@
   "name": "pemilos-backend",
   "version": "1.0.0",
   "description": "Backend Application for SMKN8Semarang Pemilos Event",
-  "main": "src/index.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon ./src/index.ts",
     "build": "npx tsc"
   },
   "repository": {
