--- a/producer/package.json
+++ b/producer/package.json
@@ -24,10 +24,12 @@
     "@types/mongoose": "^5.11.96",
     "@types/pino": "^7.0.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "pino": "^9.7.0",
     "redis": "^5.5.6",
     "ts-node": "^10.9.2",
