--- a/producer/package.json
+++ b/producer/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.13",
     "@types/pino": "^7.0.4",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
