--- a/producer/Dockerfile.producer
+++ b/producer/Dockerfile.producer
@@ -18,6 +18,11 @@ COPY --from=builder ./build/package*.json ./
 COPY --from=builder ./build/dist ./dist
 COPY --from=builder ./build/node_modules ./node_modules
 
+RUN mkdir -p /app/uploads && chown -R node:node /app/uploads && chmod -R 777 /app/uploads
+USER node
+
+RUN ls -l
+
 # RUN apk add --update nodejs npm
 
 EXPOSE 5000
